# FastApiProject

./: README.md  author
weeklyAssignment8/: pyproject.toml
weeklyAssignment8/docker_files/: Dockerfile  docker-compose.yml
weeklyAssignment8/ml_deployement/: fastapi_application.py  linear_regression_model.pkl
weeklyAssignment8/ml_deployement/datafiles/: tempCodeRunnerFile.py
weeklyAssignment8/ml_deployement/models/: mongo_data.py  pydantic_models.py
weeklyAssignment8/ml_deployement/utils/v1/: file_loader.py  preprocessing_features.py
weeklyAssignment8/notebooks/: cleaned_dataset.csv  eda.ipynb  model1.ipynb
