[tool.poetry]
name = "weeklyAssignment8"
version = "0.1.0"
description = ""
authors = ["varundeepAvi <varundeep.singh@avisoft.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
